--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
-<link rel="stylesheet" href="../../public/styles/style.css">
+<link rel="stylesheet" href="../public/styles/style.css">
+<head>
     <%- include('./partials/head') %>
 </head>
+</head>
 <body>
+    <button><a href="/searches/list">zxckm</a></button>
     <%- include('./partials/header') %>
     <main>
-
         <section id="sec1" >
             <img id="model" src="https://i.imgur.com/pV2VAoN.png" alt="">
             <h2>IF NOT NOW ... <br> THEN WHEN ??</h2>
@@ -41,14 +43,13 @@
 
         </section>
         
-
- <script src="/js/app.js"></script>
     </main>
-
+    
     <footer>
-          <%- include('./partials/footer') %>  
+        <%- include('./partials/footer') %>  
     </footer>
     
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
