--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,430 @@
 html{
-    background-color: red;
+    background-color: black;
+    background-image: url(https://media2.giphy.com/media/PlyibXHFkQUF31Mx3X/source.gif);
+
 }
+
+
+
+#audio{
+    float: right;
+    width: 200px;
+    opacity: 30%;
+    transform: rotate(90deg);
+    margin-right: -8%;
+    margin-top: -10%;
+}
+/* the header */
+header{
+    height: 220px;
+    background-color: rgba(20,20,20, 0.5) ;
+    background-image: url(https://media2.giphy.com/media/PlyibXHFkQUF31Mx3X/source.gif);
+    filter: drop-shadow(0 0 6.75rem rgba(218, 28, 43, 0.4));
+    animation: fadein 6s ease-in-out;
+
+
+
+    
+}
+
+/* the main logo  */
+#logo{
+    float: left;
+    object-fit: cover;
+    width: 220px ;
+    height: 215px;
+    animation-name: heartbeat;
+    animation-duration: 3s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    /* animation-direction: alternate; */
+    /* border-radius: 70%; */
+    /* margin: 10px; */
+}
+
+
+/* lets start the animation  */
+
+    @keyframes glow {
+        0% {filter: drop-shadow(0 0 0.0 rgba(0, 0, 0, 0));}
+        50% {filter: drop-shadow(0 0 2.75rem rgb(255, 0, 0));}
+        100% {filter: drop-shadow(0 0 0.0rem rgba(0, 0, 0, 0));}
+        
+    }
+
+
+    @keyframes heartbeat {
+        0% {transform: scale(1);}
+        50% {transform: scale(0.9);}
+        100% {transform: scale(1);}
+    }
+
+    @keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+    
+    }
+
+
+    @keyframes fadeinout {
+        0% { opacity: 0; }
+        50% { opacity: 1; }
+        100% { opacity: 0; }
+    
+    }
+
+
+    
+
+#tabs{
+    margin-left: 500px;
+    margin-top: -24px;
+}
+
+
+
+ #logotext{
+    width: 800px ;
+    height: 170px;
+    /* margin-left: 300px; */
+} 
+#mainName{
+    margin-left: 265px;
+    padding-top: 20px ;
+
+}
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: rgba(20,20,20, 0.5);
+    color: #e1183a;
+    padding: 16px;
+    font-size: 16px;
+    border-width: 0.1px;
+    border-top: 1px;
+    border-bottom: 1px;
+    border-color: rgba(255, 253, 253, 0.20);
+    margin-right: 60px;
+    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+    cursor: pointer;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #141414;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: #e1183a;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+      background-color: rgba(174,184,194,0.2);
+      transition: 900ms;
+
+}
+
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+      display: block;
+      transition: 900ms;
+     
+    }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+      background-color: rgba(174,184,194,0.3);
+      transition: 900ms;
+    
+    }
+  
+
+
+    /* main */
+    /* main{
+    display: inline-block;
+    }
+ */
+
+
+    #sec1{
+        margin-top: 100px;
+        text-align: center;        
+        margin-top: 150px;
+        background: url(https://picserio.com/data/out/378/fitness-wallpaper-hd_5842872.jpg);
+        background-size: cover;
+        animation: fadein 5s;
+    
+    }
+
+    #sec1 h2{
+        font-size: 55px;
+        color: #e1183a;
+        animation: fadeinout 2s , glow 1s;
+        animation-iteration-count: infinite;
+
+    }
+
+
+    #insidesec1{
+        background-color:rgba(218, 28, 43, 0.3);
+        height: 300px;
+
+    }
+
+
+    #insidesec1 p{
+        width: fit-content;
+        font-size: 50px;
+        padding-top: 70px;
+        padding-left: 300px;
+        color: white;
+        transition: transform 1s ease-out;
+
+    }
+
+    #insidesec1 p:hover{
+        transform: scale(1.1);
+        filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+    }
+
+    #insidesec1 img{
+        float: left;
+        width: 400px ;
+        height: 300px;  
+        border-radius: 70%; 
+    }
+
+    #model{
+        float: right;
+        height: 600px;
+        margin-top: -100px;
+        margin-right: 15%;
+        transition: transform 1s ease-out;
+        filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+    }
+    #model:hover{
+        transform: scale(1.2);
+        /* transition: 3s; */
+    }
+    
+
+    /* section 2 */
+
+    #sec2{
+        margin-top: 100px;
+        text-align: center;        
+        margin-top: 200px;
+        height: 410px;
+        animation: fadein 5s;
+
+    }
+
+    #sec2{
+        color: white;
+    }
+
+    #insidesec2{
+        background-color:rgba(218, 28, 43, 0.3);
+        height: 300px;
+    }
+
+    #insidesec2 p{
+        font-size: 25px;
+        margin-right: 15%;
+        transition: transform 1s ease-out;
+    }
+
+    #insidesec2 p:hover{
+        transform: scale(1.1);
+
+    }
+
+    #insidesec2 h2{
+        font-size: 55px;
+        padding: 1% 0% 1% 0%;
+        margin-right: 15%;
+
+    }
+
+    #insidesec2 #p{
+        padding-top: 3%;
+    }
+
+    #model2{
+        float: left;
+        margin-top: -100px;
+        margin-left: 10%;
+        transition: transform 3s ease-out;
+        width: 500px;
+        height: 500px;
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%;
+        transition: transform 1s ease-out;
+        filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+    }
+
+    #model2:hover{
+        transform: scale(1.1);
+    }
+
+    /* section 3 */
+
+    #sec3{
+        margin-top: 100px;
+        margin-bottom: 100px;
+        background: url(https://lemanpublicrelations.com/wp-content/uploads/2017/11/iStock-610873868-1080x675.jpg);
+        background-size: cover;
+        background-position: bottom;
+        animation: fadein 5s;
+
+
+
+    }
+
+    #insidesec3{
+        background-color:rgba(218, 28, 43, 0.3);
+        height: 300px;
+        padding-top: 50px;
+    }
+    
+    #insidesec3 p{
+        font-size: 40px;
+        padding-top: 40px;
+        padding-left: 180px;
+        color: white;
+    }
+
+    #insidesec3 img{
+        float: right;
+        height: 90%;
+        width: 25%;
+        margin-right: 10%;
+        cursor: pointer;
+        transition: transform 1s ease-out;
+        filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+
+    }
+
+    #insidesec3 img:hover{
+        transform: scale(1.1);
+
+    }
+
+
+    #sentence{
+        font-size: 40px;
+        padding-left: 180px;
+        color: white;
+
+    }
+
+    /* #sentence:hover{
+    
+        transform: scale(1.1);
+    } */
+
+/* Footer beggining  */
+footer{
+    height: 240px;
+    background-color: #141414;
+}
+footer li a {
+    display: inline-block;
+}
+#first{
+    text-align: center;
+    float: left;
+    margin-left: 5%;
+    font-size: 20px;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 25px;
+}
+#second{
+    text-align: center;
+    float: right;
+    font-size: 20px;
+    margin-right: 20%;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 25px;
+}
+#third{
+    /* text-align: center; */
+    padding: 20px;
+margin-right: 500px;
+margin-left: 500px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 25px;
+    width: 135px;
+    text-align: center;
+}
+.hd{
+    color:gray;
+}
+.hd:hover {
+    color: gray;
+    transition: 900ms;
+}
+/* #three{
+    padding: 10px;
+    font-size: 20px;
+} */
+.dot{
+    color: honeydew;
+}
+.dot:hover{
+    cursor: pointer;
+    color:red;
+    opacity: 30%;
+    font-size: 20px;
+}
+#imgss{
+    float: right;
+    margin-right: -450px;
+     margin-top: 20px;
+     /* margin-left: 250px; */
+    display: flex;
+    flex-flow: column;
+    cursor: pointer;
+}
+#imgss img{
+margin: 10px;
+
+/* margin-left: 150px; */
+ /* margin-left: 250px; */
+/* padding-left: 100px;  */
+}
+.a:hover{
+    filter: drop-shadow(0 0 0.85rem rgb(247, 6, 6));
+
+    /* transition: 400ms; */
+ 
+}
+/* Footer end */
