--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>main page</h1>
-    <a href="/newMeal">the form page</a>
+    <a href="/newMeal"> Get Meal Plan :) </a>
+    <a href="/newExc"> Get excercise </a>
 
 </body>
 </html>
