finished all ejs files with js server

--- a/views/pages/thanks/added.ejs
+++ b/views/pages/thanks/added.ejs
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>main page</h1>
-    <a href="/newMeal"> Get Meal Plan :) </a>
-    <a href="/newExc"> Get excercise </a>
-    <a href="/profile"> My Profile </a>
-
+    <h1>thank you , data added to your profile</h1>
 </body>
 </html>
