--- a/views/pages/fitness/show.ejs
+++ b/views/pages/fitness/show.ejs
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
 
     <h1>the excercise result </h1>
     <% workout.forEach((val) => { %>
 
-        <div>
+    <div>
+        <form action="/addMachine" name="<%= val.data.id%>" method="POST">
             <ul>
-                <li> machine Name: <%= val.data.name %></li>
-                <li> Category: <%= val.data.category %> </li>
-                <img src="<%= val.data.image %>" alt="https://i.ibb.co/M8JP7hV/download.png" srcset="">
+                <li> machine Name:</li>
+                <input type="text" name="machine" value="<%= val.data.name %>">
+                <br>
+                <li> Category:  </li>
+                <input type="text" name="catagory" value="<%= val.data.category %>">
+                <br>
+                <img src="<%= val.data.image ? val.data.image: 'https://i.ibb.co/M8JP7hV/download.png' %>" alt="<%= val.data.name %> image" >
+                <input type="text" name="url" value="<%= val.data.image %>" style="display: none;">
             </ul>
+            <button type="submit">ADD</button>
+        </form>
+
+
         </div>
 
 
 
     <% }) %>
-    
+
 </body>
+
 </html>
