--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <header>
         
-    <img id="logo" src="https://i.ibb.co/pLp4m1X/123.png" alt="mainLogo">
-    
-    <section id="mainName"><img id="logotext" src="https://i.imgur.com/FNskvH4.png" alt=""></section>
+    <!-- <img id="logo" src="https://i.ibb.co/pLp4m1X/123.png" alt="mainLogo"> -->
+    <!-- <img id="logotext" src="https://i.imgur.com/FNskvH4.png" alt=""> -->
+    <section id="mainName"></section>
     <section id="tabs">
         <div class="dropdown">
             <button class="dropbtn" onclick="location.href='/index.html';"> Home</button>
@@ -34,7 +34,7 @@
         
 
         
-                <audio id="audio" src="https://www.mboxdrive.com/Gym%20Class%20Heroes%20Ft.Ryan%20Tedder%20-%20The%20Fighter%20+%20Lyrics.mp3" autoplay loop controls ></audio>
+                <!-- <audio id="audio" src="https://www.mboxdrive.com/Gym%20Class%20Heroes%20Ft.Ryan%20Tedder%20-%20The%20Fighter%20+%20Lyrics.mp3" autoplay loop controls ></audio> -->
 </section>
 
 </header>
