--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,662 @@
+@import url('https://fonts.googleapis.com/css?family=Gayathri&display=swap');
 html{
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.774);
+} 
+@media (max-width: 768px) {
+  *{
+      background-color: rgba(0, 0, 0, 0.815);
+  }  
+  @media screen and (min-width: width 768px) and (max-width:1280px){
+    header{
+        width: 100%;
+        height: 4pc;
+        background-color: rgba(0, 0, 0, 0.877);
+    }
+    /* #tabs{
+        margin-left: 700px;
+    } */
+    .dropbtn {
+        background-color: rgba(20,20,20, 0.5);
+        color: #c7c405;
+        padding: 16px;
+        font-size: 16px;
+        border-width: 0.1px;
+        border-top: 1px;
+        border-bottom: 1px;
+        border-color: rgba(221, 236, 9, 0.63);
+        margin-right: 30px;
+        filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+        cursor: pointer;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+      }
+      
+      /* The container <div> - needed to position the dropdown content */
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+    
+      
+      /* Dropdown Content (Hidden by Default) */
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #141414;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      
+      /* Links inside the dropdown */
+      .dropdown-content a {
+        color: #e1de18;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+      
+      /* Change color of dropdown links on hover */
+      .dropdown-content a:hover {
+          background-color: rgba(126, 101, 19, 0.589);
+          transition: 900ms;
+    
+    }
+    
+      
+      /* Show the dropdown menu on hover */
+      .dropdown:hover .dropdown-content {
+          display: block;
+          transition: 900ms;
+         
+        }
+      
+      /* Change the background color of the dropdown button when the dropdown content is shown */
+      .dropdown:hover .dropbtn {
+          background-color: rgba(43, 35, 8, 0.2);
+          transition: 900ms;
+        
+        }  
+  }  
+  }
+  @media (min-width: 1280px) {
+header{
+    width: auto;
+    height: 4pc;
+    background-color: rgba(0, 0, 0, 0.877);
+}
+#tabs{
+    margin-left: 700px;
+}
+.dropbtn {
+    background-color: rgba(20,20,20, 0.5);
+    color: #c7c405;
+    padding: 16px;
+    font-size: 16px;
+    border-width: 0.1px;
+    border-top: 1px;
+    border-bottom: 1px;
+    border-color: rgba(221, 236, 9, 0.63);
+    margin-right: 60px;
+    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+    cursor: pointer;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #141414;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: #e1de18;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+      background-color: rgba(126, 101, 19, 0.589);
+      transition: 900ms;
+
+}
+
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+      display: block;
+      transition: 900ms;
+     
+    }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+      background-color: rgba(43, 35, 8, 0.2);
+      transition: 900ms;
+    
+    }
+  
+  }
+  #sec1{
+    margin-top: 100px;
+    text-align: center;        
+    margin-top: 150px;
+    background: url(https://picserio.com/data/out/378/fitness-wallpaper-hd_5842872.jpg);
+    background-size: cover;
+    animation: fadein 5s;
+
+}
+
+#sec1 h2{
+    font-size: 55px;
+    color: #c7c405;
+    animation: fadeinout 2s , glow 1s;
+    animation-iteration-count: infinite;
+
+}
+
+
+#insidesec1{
+    background-color: #222225;
+    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
+    height: 300px;
+
+}
+
+
+#insidesec1 p{
+    width: fit-content;
+    font-size: 50px;
+    padding-top: 70px;
+    padding-left: 300px;
+    color: white;
+    transition: transform 1s ease-out;
+
+}
+
+#insidesec1 p:hover{
+    transform: scale(1.1);
+    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+}
+
+#insidesec1 img{
+    float: left;
+    width: 400px ;
+    height: 300px;  
+    border-radius: 70%; 
+}
+
+#model{
+    float: right;
+    height: 600px;
+    margin-top: -100px;
+    margin-right: 15%;
+    transition: transform 1s ease-out;
+    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+}
+#model:hover{
+    transform: scale(1.2);
+    /* transition: 3s; */
+}
+
+
+/* section 2 */
+
+#sec2{
+    margin-top: 100px;
+    text-align: center;        
+    margin-top: 200px;
+    height: 410px;
+    animation: fadein 5s;
+
+}
+
+#sec2{
+    color: white;
+}
+
+#insidesec2{
+    background-color: #222225;
+     box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
+    height: 300px;
+}
+
+#insidesec2 p{
+    font-size: 25px;
+    margin-right: 15%;
+    transition: transform 1s ease-out;
+}
+
+#insidesec2 p:hover{
+    transform: scale(1.1);
+
+}
+
+#insidesec2 h2{
+    font-size: 55px;
+    padding: 1% 0% 1% 0%;
+    margin-right: 15%;
+
+}
+
+#insidesec2 #p{
+    padding-top: 3%;
+}
+
+#model2{
+    float: left;
+    margin-top: -100px;
+    margin-left: 10%;
+    transition: transform 3s ease-out;
+    width: 500px;
+    height: 500px;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    transition: transform 1s ease-out;
+    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+}
+
+#model2:hover{
+    transform: scale(1.1);
+}
+
+/* section 3 */
+
+#sec3{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background: url(https://lemanpublicrelations.com/wp-content/uploads/2017/11/iStock-610873868-1080x675.jpg);
+    background-size: cover;
+    background-position: bottom;
+    animation: fadein 5s;
+
+
+
+}
+
+#insidesec3{
+    background-color:rgba(218, 215, 28, 0.3);
+    height: 300px;
+    padding-top: 50px;
+}
+
+#insidesec3 p{
+    font-size: 40px;
+    padding-top: 40px;
+    padding-left: 180px;
+    color: white;
+}
+
+#insidesec3 img{
+    float: right;
+    height: 90%;
+    width: 25%;
+    margin-right: 10%;
+    cursor: pointer;
+    transition: transform 1s ease-out;
+    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+
+
+}
+
+#insidesec3 img:hover{
+    transform: scale(1.1);
+
+}
+
+
+#sentence{
+    font-size: 40px;
+    padding-left: 180px;
+    color: white;
+
+}
+.container {
+    display: grid;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+.column1 , .column2 {
+    width: 40%;
+    min-height: 1px;
+}
+.column1:hover{
+    transform: scale(1.04);
+    background-color: black;
+    transition: 860ms;
+}
+.column2:hover{
+    transform: scale(1.04);
+    background-color: black;
+    transition: 860ms;
+}
+.column1{
+    margin-left: 3pc;
+}
+.column2{
+    margin-left: 46pc;
+}
+.columnList{
+    list-style: none;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+/* .pricing-section {
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background: #2e2e30;
+} */
+.text-center {
+    text-align: center;
+}
+.table-left{
+ float: left;
+}
+.table-right{
+ float: right;
+ margin-left: 100pc;
+ 
+}
+.pricing-intro h1 {
+    font-size: 37px;
+    color: #FFF;
+    font-weight: 600;
+    line-height: 1.4;
+    text-transform: uppercase;
+}
+.pricing-intro p {
+    font-size: 15px;
+    color: #a1a1a1;
+    font-weight: 300;
+    line-height: 1.4;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
+.columnType{
+    font-size: 18px;
+    font-weight: 600;
+    color: #7d7d7f;
+    margin-bottom: 30px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto', sans-serif;
+}
+.table-left, .table-right {
+    padding: 20px 20px 50px 20px;
+    margin-top: 20px;
+
+    margin-bottom: 30px;
+    background-color: #222225;
+    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
+    border: transparent;
+    width: 50%;
+}
+.btn-action {
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    background: #c7c405;
+    border-color: #c7c405;
+    border-radius: 30px;
+    font-size: 16px;
+    /* font-weight: 700; */
+    width: 50%;
+    
+    letter-spacing: 1px;
+    line-height: 1;
+    padding: 15px 42px;
+    text-transform: uppercase;
+    outline: none;
+    -webkit-transition: 200ms;
+    -moz-transition: 200ms;
+    -o-transition: 200ms;
+    transition: 200ms;
+}
+.btn-action a {
+    text-decoration: none;
+}
+.btn-action:hover{
+    transform: scale(1.06);
+    transition: 860ms; 
+}
+.pricing-section {
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background: #2e2e30;
+}
+.pricing-details {
+    padding: 50px 50px 40px 50px;
+}
+.table-left .pricing-details li, .table-right .pricing-details li {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #7d7d7f;
+    line-height: 1.4;
+    margin-bottom: 10px;
+}
+span {
+    display: inline-block;
+    font-family: 'Roboto', sans-serif;
+    font-size: 48px;
+    font-weight: 700;
+    color: #FFF;
+    margin-bottom: 20px;
+}
+.pricing-section .table-left, .pricing-section .table-right {
+    padding: 20px 20px 50px 20px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    background-color: #222225;
+    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
+    border: transparent;
+    width: 100%;
+}
+.pricing-section .table-left, .pricing-section .table-right {
+    padding: 20px 20px 50px 20px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    background-color: #222225;
+    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
+    border: transparent;
+    width: 100%;
+}
+footer{
+    height: 240px;
+    background-color: #141414;
+}
+footer li a {
+    display: inline-block;
+}
+#first{
+    text-align: center;
+    float: left;
+    margin-left: 5%;
+    font-size: 20px;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 25px;
+}
+#second{
+    text-align: center;
+    float: right;
+    font-size: 20px;
+    margin-right: 20%;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 25px;
+}
+#third{
+    /* text-align: center; */
+    padding: 20px;
+margin-right: 500px;
+margin-left: 500px;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    line-height: 25px;
+    width: 135px;
+    text-align: center;
+}
+.hd{
+    color:gray;
+}
+.hd:hover {
+    color: gray;
+    transition: 900ms;
+}
+/* #three{
+    padding: 10px;
+    font-size: 20px;
+} */
+.dot{
+    color: honeydew;
+}
+.dot:hover{
+    cursor: pointer;
+    color:#c7c405;
+    opacity: 30%;
+    font-size: 20px;
+}
+.a:hover{
+    filter: drop-shadow(0 0 0.85rem #c7c405);
+
+    /* transition: 400ms; */
+ 
+}
+footer{
+    margin-top: 30pc;
+}
+/* Footer end *
+ /* ----------------------- form design --------------------------------------- */
+ .foodForm{
+     height: 55pc;
+     margin: auto;
+     padding: 20px 20px 50px 20px;
+     margin-top: 20px;
+  color: white;
+     margin-bottom: 30px;
+     background-color: #222225;
+     box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
+     border: transparent;
+     width: 70%;
+ }
+ .foodForm button{
+     font-family: 'Roboto', sans-serif;
+     color: #FFFFFF;
+     background: #c7c405;
+     border-color: #c7c405;
+     border-radius: 30px;
+     font-size: 23px;
+     width: 50%;
+     padding: 15px 42px;
+     transition: 200ms;
+     margin-top: 3pc;
+     margin-left: 12pc;
+ }
+ .foodForm button:hover{
+    transform: scale(1.06);
+    transition: 860ms; 
+ }
+ .foodForm:hover{
+    transform: scale(1.01);
+    transition: 860ms;
+ }
+ fieldset{
+    font-family: 'Gayathri', sans-serif;
+    font-size: 17px;
+     height: 52pc;
+     padding: 2%;
+ }
+ input , select{
+     border:#c7c405 solid ;
+     width: 60%;
+     padding: 15px;
+     margin: 10px;
+ }
+ label{
+     width: 22pc;
+     font-size: 27px;
+     text-align: center;
+     padding: 2%;
+     margin-left: 13pc;
+ }
+/* =========================== result section ============================= */
+.foodResult{
+    background-image: url(https://files.slack.com/files-pri/TNGRRLUMA-FSK436DLP/depositphotos_40259443_s-2019.jpg);
+    width: 90%;
+    color: white;
+    padding: 5pc;
+
+}
+.food-Result-1{
+    width: 100%;
+    background-color:#222225ad;
+    height: 7pc;
+}
+.food-result-list-client{
+    list-style-type: none;
+    font-size: 20px;
+}
+.results{
+    display: grid;
+    grid-template-columns: auto auto;
+ grid-template-rows: auto auto auto;
+}
+.food-Section{
+    color: white;
+    font-family: 'Roboto', sans-serif; 
+    font-size: 20px;
+    width: 80%;
+    background-color: #222225;
+    border:#c7c405 solid ;
+    margin: 30px;
+}
+.food-Section:hover{
+    transform: scale(1.01);
+    transition: 860ms; 
+}
+#resultImage{
+    width: 80%;
+    height: 70%;
+}
+.add-To-MyData{
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    background: #c7c405;
+    border-color: #c7c405;
+    border-radius: 30px;
+    font-size: 15px;
+    width: 40%;
+    padding: 15px 42px;
+    transition: 200ms;
+    margin-top: 1pc;
+}
+.food-result-list{
+    font-family: 'Roboto', sans-serif;
+    list-style-type: none;
+    text-align: center;
+    line-height: 40px;
 }
