--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -4,24 +4,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>food Form</title>
+    <link rel="stylesheet" href="../public/styles/style.css">
+<link rel="stylesheet" href="../public/styles/base.css">
+<link rel="stylesheet" href="../public/styles/layout.css">
+<link rel="stylesheet" href="../public/styles/modules.css">
 </head>
 
 <body>
-<header>Inputs . . .</header>
+    <header>
+        
+        <!-- <img id="logo" src="https://i.ibb.co/pLp4m1X/123.png" alt="mainLogo"> -->
+        <!-- <img id="logotext" src="https://i.imgur.com/FNskvH4.png" alt=""> -->
+        <section id="mainName"></section>
+        <section id="tabs">
+            <div class="dropdown">
+                <button class="dropbtn" onclick="location.href='/index.html';"> Home</button>
+                <div class="dropdown-content">
+                    <a href="#sec1">Section One</a>
+                    <a href="#sec2">Section Two</a>
+                    <a href="#sec3">Section Three</a>
+                </div>
+            </div>
+            
+            <div class="dropdown">
+                <button class="dropbtn">Health Care</button>
+                <div class="dropdown-content">
+                    <a href="/lose.html">lose</a>
+                    <a href="/gain.html">gain</a>
+                    <a href="/main.html">maintenance</a>
+                </div>
+            </div>
+                                        <div class="dropdown">
+                                            <button class="dropbtn" onclick="location.href='/list.html';" >Join Us</button>
+                                            <div class="dropdown-content">
+                                            
+                                            </div>
+                                        </div>
+            <div class="dropdown">
+                <button class="dropbtn" onclick="location.href='/about.html';"> About us</button>
+                <iframe src="https://raw.githubusercontent.com/anars/blank-audio/master/250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+            </div>
+            
+    
+            
+                    <!-- <audio id="audio" src="https://www.mboxdrive.com/Gym%20Class%20Heroes%20Ft.Ryan%20Tedder%20-%20The%20Fighter%20+%20Lyrics.mp3" autoplay loop controls ></audio> -->
+    </section>
+    
+    </header>
 <main>
-    <form action="/mealLest" method="POST" >
+    <form action="/mealLest" method="POST" class="foodForm" >
+ <fieldset>
+     <label for="form"> Please Select Your Information</label> <br>
+     <!-- <input type="radio" name="time" value="day"> -->
+     <!-- <input type="radio" name="time" value="week"> -->
+ Your Name :<input type="text" name="userName" id="user" placeholder="Enter your name please" required> <br>
+ Your Email: <input type="email" name="userEmail" placeholder="Enter your Email please"> <br>
+ Your Weight:<input type="namber" name="Weight" placeholder="Enter your Weight in Kg" required> <br>
+ Your height : <input type="namber" name="height" placeholder="Enter your height in Cm" required> <br>
+    Calories:<input type="number" name="calories"  placeholder="Write the calories Please "> <br>
+    Age:  <input type="number" name="age" placeholder="Enter tour age please "> <br>
+    Gender: <select name="gender" id="">
+        <option value="defult">Select yor gender ..</option>
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+    </select> <br>
+    Diet Type: <select name="dietType" id="dietType" required>Diet Type 
+         <option value="defult"> Select Diet Type .. </option>
+         <option value="vegetarian">vegetarian</option>
+         <option value="Low-Carb Diets">Low-Carb Diets</option>
+         <option value="The Paleo Diet">The Paleo Diet</option>
+         <option value="The Vegan Diet">The Vegan Diet</option>
+     </select> <br>
+     Spicial Satuation<select name="spicial" id="spicial">
+         <option value="defult">Select If you have Spicial Satuation</option>
+         <option value="allergens">allergens</option>
+         <option value="ingredients">ingredients</option>
+     </select> <br>
+     <!-- <input type="text" name="spicial" placeholder="allergens or ingredients that must be excluded"> -->
+     <button type="submit"> Submit</button>
 
-    <!-- <input type="radio" name="time" value="day"> -->
-    <!-- <input type="radio" name="time" value="week"> -->
-
-    <input type="text" name="calories"  placeholder="calories">
-    <input type="text" name="dietType" placeholder="diet type ex(vegetarian)">
-    <input type="text" name="spicial" placeholder="allergens or ingredients that must be excluded">
-    <button type="submit"> Submit</button>
+ </fieldset>
 
 </form>
 </main>
-
+<footer>
+    <section id="first">
+        <h2 class="hd">Gym's In The World</h2> <br>
+        <div>
+            <nav>
+                <ul id="one">
+                    <li  class="dot" onclick="location.href='https://www.brooklynzoony.com/parkour/';"> Brooklyn Zoo, New York
+                    </li>
+                    <li  class="dot" onclick="location.href='https://intelligentstrength.net/das-gym/';">La Belle Équipe, Paris
+                    </li>
+                    <li  class="dot" onclick="location.href='https://intelligentstrength.net/das-gym/';">Das Gym, Vienna</li>
+                    <li  class="dot" onclick="location.href='https://intelligentstrength.net/das-gym/';">NFC Court, San Francisco
+                    </li>
+                    <li  class="dot" onclick="location.href='http://www.goldsgym.jo/';">GOLD'S GYM</li>
+                    <li  class="dot" onclick="location.href='https://www.brooklynzoony.com/parkour/';"> Brooklyn Zoo, New York
+                    </li>
+                    <!-- <li  class="dot" onclick="location.href='https://zenergysv.com/';"> Zenergy</li> -->
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <section id="second">
+        <h3 class="hd">Nutritional tips Websites</h3>
+        <br>
+        <nav>
+            <ul id="two">
+                <li class="dot" onclick="location.href='https://www.eatright.org/';">eat right </li>
+                <li  class="dot" onclick="location.href='https://www.nutrition.gov/';">Nutrition</li>
+                <li  class="dot" onclick="location.href='https://www.healthline.com/nutrition/27-health-and-nutrition-tips';">
+                    Health Line</li>
+                    <li  class="dot" onclick="location.href='http://www.livehealthyoc.me/healthy-lifestyle-tips/';">Live Healthy</li>
+                    <li  class="dot" onclick="location.href='https://www.choosemyplate.gov/ten-tips-choose-myplate';">Choose My Plate
+                    </li>
+                </ul>
+            </nav>
+        </section>
+        <section id="third">
+            <h4 class="hd">For Diets</h4>
+            <br>
+            <nav>
+                <ul id="three">
+                    <li class="dot"
+                    onclick="location.href='https://rw.yourketo.diet/?gclid=CjwKCAiArJjvBRACEiwA-Wiqq1EAanpXkLT9zbn70P4-b9E57KI8BxOG8QBeD8Ohuohj2kdvjcS7BxoC0ZMQAvD_BwE';">
+                    Ketosis Diet</li>
+                    <li class="dot" onclick="location.href='https://www.medicalnewstoday.com/articles/7381.php';">Raw Food Diet</li>
+                <li class="dot" onclick="location.href='https://www.webmd.com/diet/a-z/blood-type-diet';">Blood Type Diet</li>
+                <li class="dot" onclick="location.href='https://www.nhs.uk/live-well/eat-well/the-vegan-diet/';">Vegan Diet</li>
+            </ul>
+        </nav>
+    </section> 
+</footer>
 </body>
 </html>
