select files to ayman

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -329,6 +329,7 @@ header{
     color: white;
 
 }
+/* aymaaaaaaaaaaaaaaan */
 .container {
     display: grid;
     padding-right: 15px;
@@ -484,6 +485,7 @@ span {
     border: transparent;
     width: 100%;
 }
+/* aymaaaaaaaaaaaaaan */
 footer{
     height: 240px;
     background-color: #141414;
