--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,6 +71,7 @@
 
         </section>
         <!-- <a href="/newMeal">the form page</a> -->
+        <!-- aymaaaaaaan  -->
     </main>
     <div class="pricing-section text-center">
         <div class="container">
@@ -111,6 +112,7 @@
           </div>
         </div>
       </div>
+      <!-- aymaaaaaaan -->
       <section >
  <img src="../public/image/fitness4.jpg" alt="">
       </section>
