--- a/public/styles/result.css
+++ b/public/styles/result.css
@@ -9,6 +9,7 @@
      font-size: 20px;
  }
  .results{
+     background-color: rgb(197, 24, 24);
      display: grid;
      grid-template-columns: auto ;
   grid-template-rows: auto auto auto auto;
