delete the comment that we don't need

--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -74,26 +74,8 @@
     <div id="results" style="display:none;"></div>
     </div><!--  /.calc-outer-wrap -->
 
-<!-- <form action="" class="calc-form">
-    <fieldset>
-        Age:  <input type="text" name="age" id="age" inputmode="numeric" pattern="[0-9]*" placeholder="Enter your age please "> <br> 
-        Gender: <select name="gender" id="">
-            <option value="defult">Select yor gender ..</option>
-            <option value="female">Female</option>
-            <option value="male">Male</option>
-        </select> <br>
-        Your height : <input type="text" name="height_cm" id="height-cm" inputmode="numeric" pattern="[0-9]*" placeholder="Enter your height in CM "> <br>   
-        Your Weight:<input type="namber" name="Weight" placeholder="Enter your Weight in Kg" required> <br>
-        <select name="weight_unit">
-            <option value="lb">lb</option>
-            <option value="kg">kg</option>
-          </select>
-          <div class="btn-wrap field-outer">
-            <button class="form-submit">Calculate</button>
-          </div>
-      
-    </fieldset>
-</form> -->
+    
+ <!-- ==================================================information form ================================= -->
 <div id="results" style="display:none;"></div>
 <form action="/mealLest" method="POST" class="foodForm" >
     <fieldset>
