--- a/public/styles/result.css
+++ b/public/styles/result.css
@@ -1,5 +1,23 @@
 /* =========================== result section ============================= */
 @import url('https://fonts.googleapis.com/css?family=Gayathri&display=swap');
+html{
+    background-color: rgba(0, 0, 0, 0.774);
+}
+@media (max-width: 768px){
+    main{
+        display: grid;
+        grid-template-columns: auto;
+    }
+    .machine-pic{
+        margin-right: 10%;
+    }  
+}
+ @media (min-width: 768px){
+ main{
+     display: grid;
+     grid-template-columns: auto auto;
+ }
+ } 
 .food-Result-1{
     text-align: center;
     line-height: 2pc;
@@ -9,12 +27,12 @@
      font-size: 20px;
  }
  .results{
-     background-color: rgb(197, 24, 24);
+     /* background-color: rgb(197, 24, 24); */
      display: grid;
      grid-template-columns: auto ;
   grid-template-rows: auto auto auto auto;
  }
- .food-Section ,.food-Result-1{
+ .food-Section ,.food-Result-1 , .machine-form-result{
      color: white;
      font-family: 'Roboto', sans-serif; 
      font-size: 20px;
@@ -22,16 +40,18 @@
      background-color: #222225;
      border:rgb(197, 24, 24) solid ;
      margin: 3% 3% 3% 10%;
+     list-style-type: none;
  }
  .food-Section:hover , .food-Result-1:hover{
      transform: scale(1.01);
      transition: 860ms; 
  }
- #resultImage{
-     width: 60%;
-     height: 60%;
+ #resultImage , .machine-pic{
+     width: 80%;
+     height: 80%;
+     /* margin: 3%; */
  }
- .add-To-MyData{
+ .add-To-MyData ,.add-machine-button {
      font-family: 'Roboto', sans-serif;
      color: #FFFFFF;
      background: rgb(197, 24, 24);
@@ -62,4 +82,24 @@
  .food-result-h{
      font-size: 95%;
      font-family: 'Roboto', sans-serif;
+ }
+ .machine-form-result{
+    width: 50%;
+    /* grid-column: 2;
+    grid-row: 1; */
+    background-color: #222225;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    line-height: 40px;
+    color: white;
+    font-family: 'Roboto', sans-serif; 
+    font-size: 20px;
+    width: 75%;
+    background-color: #222225;
+    border:rgb(197, 24, 24) solid ;
+    margin: 3% 3% 3% 10%;
+}
+.machine-form-result ul{
+    list-style-type: none;
+
  }
