--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -327,69 +327,78 @@ header{
 
 }
 /* aymaaaaaaaaaaaaaaan */
+@media (max-width: 768px){
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+ @media (min-width: 768px){
+
 .container {
+    width: 90%;
     display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
     padding-right: 15px;
     padding-left: 15px;
+ 
 }
-.column1 , .column2 {
-    width: 40%;
-    min-height: 1px;
-}
-.column1:hover{
-    transform: scale(1.04);
-    background-color: black;
-    transition: 860ms;
-}
-.column2:hover{
-    transform: scale(1.04);
-    background-color: black;
-    transition: 860ms;
-}
+
 .column1{
-    margin-left: 3pc;
-}
-.column2{
-    margin-left: 46pc;
-}
-.columnList{
-    list-style: none;
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-/* .pricing-section {
+    grid-column: 1;
+   }
+   .column2{
+    grid-column: 2;
+    
+   }
+ }
+ .container {
     width: 100%;
     height: 100%;
     padding-top: 100px;
     padding-bottom: 100px;
     background: #2e2e30;
-} */
+    text-align: center;
+ } 
+.column1 , .column2 {
+    width: 85%;
+    min-height: 1px;
+    font-size: 20px;
+    padding: 4%;
+    
+}
+.column1:hover{
+    transform: scale(1.04);
+    /* background-color: black; */
+    transition: 860ms;
+}
+.column2:hover{
+    transform: scale(1.04);
+    /* background-color: black; */
+    transition: 860ms;
+}
+.columnList{
+    list-style: none;
+}
 .text-center {
     text-align: center;
-}
-.table-left{
- float: left;
-}
-.table-right{
- float: right;
- margin-left: 100pc;
- 
 }
 .pricing-intro h1 {
     font-size: 37px;
     color: #FFF;
-    font-weight: 600;
     line-height: 1.4;
-    text-transform: uppercase;
 }
 .pricing-intro p {
-    font-size: 15px;
+    font-size: 18px;
+    padding: 2%;
     color: #a1a1a1;
-    font-weight: 300;
     line-height: 1.4;
     letter-spacing: 1px;
-    margin-top: 10px;
-    margin-bottom: 50px;
+    margin-top: 5%;
+    margin-bottom: 7%;
 }
 .columnType{
     font-size: 18px;
@@ -402,33 +411,18 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
 }
 .table-left, .table-right {
-    padding: 20px 20px 50px 20px;
-    margin-top: 20px;
-
-    margin-bottom: 30px;
     background-color: #222225;
-    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
     border: transparent;
-    width: 50%;
+    width: 96%;
 }
 .btn-action {
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
-    background: #c7c405;
-    border-color: #c7c405;
+    background: rgb(197, 24, 24);
+    border-color: rgb(197, 24, 24);
     border-radius: 30px;
-    font-size: 16px;
-    /* font-weight: 700; */
-    width: 50%;
-    
-    letter-spacing: 1px;
-    line-height: 1;
-    padding: 15px 42px;
-    text-transform: uppercase;
-    outline: none;
-    -webkit-transition: 200ms;
-    -moz-transition: 200ms;
-    -o-transition: 200ms;
+    font-size: 130%;
+    width: 40%;  
     transition: 200ms;
 }
 .btn-action a {
@@ -448,37 +442,27 @@ h1, h2, h3, h4, h5, h6 {
 .pricing-details {
     padding: 50px 50px 40px 50px;
 }
-.table-left .pricing-details li, .table-right .pricing-details li {
+.columnList li {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-    font-weight: 400;
+    /* font-weight: 400; */
     color: #7d7d7f;
     line-height: 1.4;
-    margin-bottom: 10px;
+    margin-bottom: 3%;
 }
 span {
     display: inline-block;
     font-family: 'Roboto', sans-serif;
     font-size: 48px;
-    font-weight: 700;
+    /* font-weight: 700; */
     color: #FFF;
-    margin-bottom: 20px;
+    margin-bottom: 8%;
 }
-.pricing-section .table-left, .pricing-section .table-right {
+ .table-left,  .table-right {
     padding: 20px 20px 50px 20px;
     margin: 0 auto;
     margin-bottom: 30px;
     background-color: #222225;
-    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
-    border: transparent;
-    width: 100%;
-}
-.pricing-section .table-left, .pricing-section .table-right {
-    padding: 20px 20px 50px 20px;
-    margin: 0 auto;
-    margin-bottom: 30px;
-    background-color: #222225;
-    box-shadow: 0px 0px 80px 0px rgba(0,0,0,.1);
     border: transparent;
     width: 100%;
 }
