--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,14 +76,44 @@
 
         </section>
         <!-- <a href="/newMeal">the form page</a> -->
+        <div class="container">
+          <div class="pricing-intro">
+            <h1 class="">Our Package</h1>
+            <p class="">Those who think they have not time for bodily exercise will sooner or later have to find time for illness.
+               </p>
+          </div>
+        <div class="column1">
+          <div class="table-left " >
+              <span>FOOD</span>
+              <ul class="columnList">
+                <li>Food is an important part of a balanced diet</li>
+                <li>Take care of your body ,It’s the only place you have to live</li>
+                <li>have to fight a battle more than once to win it</li>
+                <li>You can have your cake and lose weight, too!”</li>
+              </ul>
+              <button class="btn-action"><a href="/newMeal">Get start</a></button>
+            </div>
+        </div>
+            <div class="column2">
+              <div class="table-right" >
+                  <span>EXERCISES</span>
+                  <ul class="columnList">
+                    <li>You have to want it, you have to plan for it</li>
+                    <li>You don’t get the ass you want by sitting on it</li>
+                    <li>You have to do the work yourself</li>
+                    <li>Think of your workouts as important meetings</li>
+                  </ul>
+                  <button class="btn-action"><a href="/newExercise">Get start</a></button>
+                </div>
+              </div>
+          </div>
         <!-- aymaaaaaaan  -->
     </main>
-    <div class="pricing-section text-center">
+    <!-- <div class="pricing-section text-center">
         <div class="container">
-          <div class="col-md-12 col-sm-12 nopadding">
             <div class="pricing-intro">
-              <h1 class="wow fadeInUp" data-wow-delay="0s" style="visibility: visible; animation-delay: 0s; animation-name: fadeInUp;">Our Package</h1>
-              <p class="wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">Those who think they have not time for bodily exercise will sooner or later have to find time for illness.
+              <h1 class="wow fadeInUp">Our Package</h1>
+              <p class="wow fadeInUp">Those who think they have not time for bodily exercise will sooner or later have to find time for illness.
                  </p>
             </div>
             <div class="column1">
@@ -98,8 +128,6 @@
                   </ul>
                   <button class="btn-action"><a href="/newMeal">Get start</a></button>
                 </div>
-              </div>
-            </div>
             <div class="column2">
               <div class="table-right" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
                 <div class="pricing-details">
@@ -115,8 +143,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </div> -->
       <!-- aymaaaaaaan -->
       <section >
  <img src="../public/image/fitness4.jpg" alt="">
